k8s/testing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fadl-testing
  labels:
    app.kubernetes.io/part-of: fadl-clinic
    environment: testing
